modify kaimemo service
