# internal/infrastructure/persistence/models/shopping_memo.go
@@ -4,7 +4,7 @@ package models
 type ShoppingMemo struct {
 	Base
 	HouseholdBookID uint   `gorm:"not null;index"`
-	CategoryID      *uint  `gorm:"index"`
+	CategoryID      uint   `gorm:"index"`
 	Title           string `gorm:"type:varchar(255);not null"`
 	Memo            string `gorm:"type:text"`
 	IsCompleted     bool   `gorm:"not null;default:false;index"`
